data-elevator/src/App.css
/* body {
  background-color: grey;
} */
h1 {
  margin-left: 35vw;
  color: grey;
  font-size: 70px;
}

.input-text {
  margin: auto;
  width: 50%;
  padding: 10px;
}

.input {
  margin-left: 20px;
}

.label {
  margin-left: 40px;
}

.elevate {
  margin-left: 40%;
  margin-top: 40px;
  font-size: xx-large;
}
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.leaflet-container {
  margin-top: 50px;
  width: 100%;
  height: 50vh;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

